<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/about_bg"
            tools:context=".screens.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:text="@string/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/beige_3"
            android:shadowColor="@color/beige_2"
            android:shadowRadius="3"
            android:shadowDx="0"
            android:shadowDy="2"
            android:fontFamily="sans-serif-condensed"
            android:textSize="24sp"/>


        <TextView
            android:id="@+id/tv_about_intro"
            android:text="@string/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/beige_1"
            android:shadowColor="@color/beige_2"
            android:shadowRadius="2"
            android:shadowDx="0"
            android:shadowDy="2"
            android:fontFamily="sans-serif-light"
            android:textSize="18sp"
            android:gravity="center"/>


        <Button
            android:id="@+id/btn_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/license"
            android:textSize="20sp"
            android:shadowColor="@color/beige_2"
            android:shadowRadius="3"
            android:shadowDx="0"
            android:shadowDy="2"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/beige_1"/>


        <Button
            android:id="@+id/btn_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/source_code"
            android:textSize="20sp"
            android:shadowColor="@color/beige_2"
            android:shadowRadius="3"
            android:shadowDx="0"
            android:shadowDy="2"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/beige_1"/>


        <TextView
            android:text="@string/about_me_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/beige_3"
            android:shadowColor="@color/beige_2"
            android:shadowRadius="3"
            android:shadowDx="0"
            android:shadowDy="2"
            android:fontFamily="sans-serif-condensed"
            android:textSize="24sp"/>

        <TextView
            android:text="@string/about_me_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/beige_1"
            android:shadowColor="@color/beige_2"
            android:shadowRadius="2"
            android:shadowDx="0"
            android:shadowDy="2"
            android:fontFamily="sans-serif-light"
            android:textSize="18sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/email"
            android:drawableLeft="@drawable/gmail"
            android:drawablePadding="10dp"
            android:textSize="20sp"
            android:shadowColor="@color/beige_2"
            android:shadowRadius="3"
            android:shadowDx="0"
            android:shadowDy="2"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/beige_1"/>

        <Button
            android:id="@+id/btn_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/github"
            android:drawableLeft="@drawable/github"
            android:drawablePadding="10dp"
            android:textSize="20sp"
            android:shadowColor="@color/beige_2"
            android:shadowRadius="3"
            android:shadowDx="0"
            android:shadowDy="2"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/beige_1"/>

        <Button
            android:id="@+id/btn_gplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/gplus"
            android:drawableLeft="@drawable/gplus"
            android:drawablePadding="10dp"
            android:textSize="20sp"
            android:shadowColor="@color/beige_2"
            android:shadowRadius="3"
            android:shadowDx="0"
            android:shadowDy="2"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/beige_1"/>

    </LinearLayout>

</ScrollView>
